<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/install_string"
        android:icon="@drawable/install_icon"
        android:id="@+id/install"/>
    <item
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/demolition_string"
        android:icon="@drawable/demolition_icon"
        android:id="@+id/demolition"/>
    <item
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/inventory_string"
        android:icon="@drawable/inventory_icon"
        android:id="@+id/inventory"/>
</menu>