<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/rectangle"
    android:layout_height="wrap_content"
    android:paddingBottom="5dp">

    <TextView
        android:id="@+id/sixthCheckboxTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="108dp"
        android:layout_marginEnd="-6dp"
        android:text="@string/szoftverText"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/sixthCheckbox"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/eightCheckboxTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="108dp"
        android:layout_marginEnd="-6dp"
        android:text="Teszt:"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/eightCheckbox"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/thirdCheckboxTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="-6dp"
        android:text="@string/kirakvaText"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/thirdCheckbox"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/firstCheckbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="40dp"
        android:enabled="false"
        android:text=""
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/thirdCheckbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="68dp"
        android:enabled="false"
        android:text=""
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/fourthCheckbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="202dp"
        android:layout_marginTop="68dp"
        android:enabled="false"
        android:text=""
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/secondCheckboxTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="-6dp"
        android:text="@string/nem_kirakhatoText"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/secondCheckbox"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/firstCheckboxTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="-6dp"
        android:text="@string/kiadvaText"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/firstCheckbox"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/seventhCheckbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="202dp"
        android:layout_marginTop="100dp"
        android:enabled="false"
        android:text=""
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/fifthCheckbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="318dp"
        android:layout_marginTop="68dp"
        android:enabled="false"
        android:text=""
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/sixthCheckbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="100dp"
        android:enabled="false"
        android:text=""
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/seventhCheckboxTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="108dp"
        android:layout_marginEnd="-6dp"
        android:text="@string/paramText"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/seventhCheckbox"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/secondCheckbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="300dp"
        android:layout_marginTop="40dp"
        android:enabled="false"
        android:text=""
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/eightCheckbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="318dp"
        android:layout_marginTop="100dp"
        android:enabled="false"
        android:text=""
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/fourthCheckboxTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="-6dp"
        android:text="@string/elosztoText"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/fourthCheckbox"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/fifthCheckboxTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="-6dp"
        android:text="@string/aramText"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/fifthCheckbox"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/companyTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="Bar 15"
        android:textSize="27sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.516"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/lastCommentLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="152dp"
        android:text="@string/utols_megjText"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/lastCommentDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="130dp"
        android:layout_marginTop="154dp"
        android:text="2024.07.16 - 13:45"
        android:textColor="@color/lightGray"
        android:textSize="18sp"
        android:textStyle="italic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/lastCommentText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="188dp"
        android:text="Zárva volt tegnap, ma nyit"
        android:textSize="20sp"
        android:textStyle="italic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>